syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package microsoft.eshoponcontainers.integrationevents.basket;

option csharp_namespace="Microsoft.eShopOnContainers.Services.Kafka.Protobuf.IntegrationEvents.Basket";

import "CustomTypes/decimal_value.proto";
import "CustomTypes/uuid_value.proto";
import "google/protobuf/timestamp.proto";

message UserCheckoutAcceptedIntegrationEventProto {
  string user_id = 1;

  string user_name = 2;

  int32 order_number = 3;

  string city = 4;

  string street = 5;

  string state = 6;

  string country = 7;

  string zip_code = 8;

  string card_number = 9;
  string card_holder_name = 10;

  google.protobuf.Timestamp card_expiration = 11;

  string card_security_number = 12;

  int32 card_type_id = 13;

  string buyer = 14;

  UuidValue request_id = 16;

  CustomerBasket basket = 15;
}

message CustomerBasket {
  string BuyerId = 1;

  repeated BasketItem Items = 2;
}

message BasketItem {
  string id = 1;
  int32 product_id = 2;
  string product_name = 3;
  DecimalValue unit_price = 4;
  DecimalValue old_unit_price = 5;
  int32 quantity = 6;
  string picture_url = 7;
}