syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package microsoft.eshoponcontainers.integrationevents.catalog;

option csharp_namespace="Microsoft.eShopOnContainers.Services.Kafka.Protobuf.IntegrationEvents.Catalog";

import "CustomTypes/decimal_value.proto";

message ProductPriceChangedProto {
  int32 product_id = 1;
  DecimalValue new_price = 2;
  DecimalValue old_price = 3;
}